[gd_scene load_steps=2 format=3 uid="uid://5wb6meichrgk"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_l6ipv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l6ipv")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 81.0
offset_top = 251.0
offset_right = 244.0
offset_bottom = 358.0
text = "Spin Wheel"

[node name="wheel_name" type="LineEdit" parent="."]
offset_left = 299.0
offset_top = 105.0
offset_right = 559.0
offset_bottom = 136.0
placeholder_text = "Wheel Name Here"

[node name="option_name" type="LineEdit" parent="."]
offset_left = 73.0
offset_top = 105.0
offset_right = 249.0
offset_bottom = 136.0
placeholder_text = "Option Name Here"

[node name="ConfirmButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 163.0
offset_right = 247.0
offset_bottom = 194.0
text = "Add Option To Wheel"

[node name="option_chance" type="SpinBox" parent="."]
offset_left = 122.0
offset_top = 44.0
offset_right = 224.0
offset_bottom = 75.0
prefix = "chance"

[node name="wheel_save_button" type="Button" parent="."]
offset_left = 387.0
offset_top = 159.0
offset_right = 479.0
offset_bottom = 225.0
text = "Save Wheel"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 617.0
offset_top = 37.0
offset_right = 770.0
offset_bottom = 226.0

[node name="reset_wheel" type="Button" parent="."]
offset_left = 375.0
offset_top = 49.0
offset_right = 500.0
offset_bottom = 81.0
text = "reset wheel"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="wheel_save_button" to="." method="_on_wheel_save_button_pressed"]
[connection signal="pressed" from="reset_wheel" to="." method="_on_reset_wheel_pressed"]
